weird-dev initial push

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container" id="home-flex">
+  <div class="box text-center">
+    <h1>We're Developers</h1>
+    <h3>New Site Coming Soon✌🏼</h3>
+  </div>
+  <div class="box text-center">
+    <h4>
+    <ul class="list-inline" style="text-decoration: none">
+      <li class="list-inline-item">Web Development</li>
+      <li class="list-inline-item">Software Development</li>
+      <li class="list-inline-item">WeChat Mini Programs</li>
+    </ul>
+    </h4>
+  </div>
+  <div class="box text-center">
+    <h4>Got any questions? Reach us <a href="mailto:jasone@weird-developers.com?subject=Hi%20Ops%20Artifex!", class="emaillink">here</a>.</h4>
+  </div>
+</div>
