--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,24 @@
-// Specific CSS for your home-page
+#home-flex{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #384BB5;
+  width: 100%;
+}
+
+.box{
+  margin: 10px;
+  padding: 20px;
+  color: white;
+}
+
+.emaillink{
+  text-decoration: underline
+}
+
+.emaillink:hover{
+  color: #F5D745;
+  text-decoration: none;
+}
