--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,20 @@
 <div class="container" id="home-flex">
-  <div class="box text-center">
+  <div class="box text-center" style="margin-bottom: -30px ">
     <h1>We're Developers</h1>
-    <h3>New Site Coming Soon✌🏼</h3>
+    <h3>New Site Coming Soon!</h3>
+    <h3>✌🏼</h3>
   </div>
   <div class="box text-center">
-    <h4>
     <ul class="list-inline" style="text-decoration: none">
-      <li class="list-inline-item">Web Development</li>
-      <li class="list-inline-item">Software Development</li>
-      <li class="list-inline-item">WeChat Mini Programs</li>
+      <li class="list-inline-item" style="margin-bottom: 5px">Web Development</li>
+      <li class="list-inline-item" style="margin-bottom: 5px">Software Development</li>
+      <li class="list-inline-item" style="margin-bottom: 5px">WeChat Mini Programs</li>
     </ul>
-    </h4>
   </div>
   <div class="box text-center">
-    <h4>Got any questions? Reach us <a href="mailto:jasone@weird-developers.com?subject=Hi%20Ops%20Artifex!", class="emaillink">here</a>.</h4>
+    <h4>Got any questions? Reach us <a href="mailto:jasone@weird-developers.com?subject=Hi%20We're%20Developers!", class="emaillink">here</a>.</h4>
+  </div>
+  <div class="box text-center">
+    <h3>📍 🇨🇳 🇦🇷 🇺🇸 🇪🇸</h3>
   </div>
 </div>
