--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
     </h4>
   </div>
   <div class="box text-center">
-    <h5>Got any questions? Reach us <a href="mailto:jasone@weird-developers.com?subject=Hi%20We're%20Developers!", class="emaillink">here</a>.</h5>
+    <h5>Got any questions? Reach us <a href="mailto:jason@weird-developers.com?subject=Hi%20We're%20Developers!", class="emaillink">here</a>.</h5>
   </div>
   <div class="box text-center">
     <h3>📍 🇨🇳 🇦🇷 🇺🇸 🇪🇸</h3>
