--- a/app/views/pages/pricing.html.erb
+++ b/app/views/pages/pricing.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="box" style="width: 400px">
       <p>Interested in working together? Worried about costs?</p>
-      <p>To save you some time, check out <%= link_to "this outline", "/public/weredevelopers_pricing_2017.pdf", class: "pageslink" %> for more detailed information on what web development services we offer and estimated costs.</p>
+      <p>To save you some time, check out <%= link_to "this outline", asset_path("/weredevelopers_pricing_2017.pdf"), target: "_blank", class: "pageslink" %> for more detailed information on what web development services we offer and estimated costs.</p>
     </div>
   </div>
 </div>
