--- a/app/views/pages/pricing.html.erb
+++ b/app/views/pages/pricing.html.erb
@@ -1,13 +1,9 @@
 <div class="container" id="aboutus-flex">
-  <div class="container">
-    <div class="header">
-    <h5 class="pull-right" style="padding-top: 10px"><%= link_to "back", root_path, class: "pageslink" %></h5>
-    <h2 style="margin-bottom: -15px">Pricing</h2>
-    <hr id="headerline">
-    </div>
-    <div class="box" style="width: 400px">
-      <p>Interested in working together? Worried about costs?</p>
+    <div class="box" style="width: 380px" >
+      <h5 class="pull-right" style="padding-top: 20px"><%= link_to "back", root_path, class:"pageslink" %></h5>
+      <h2 style="margin-bottom: -15px">Pricing</h2>
+      <hr id="headerline">
+      <p>Interested in working together?🤔 Worried about costs?😨</p>
       <p>To save you some time, check out <%= link_to "this outline", asset_path("/weredevelopers_pricing_2017.pdf"), target: "_blank", class: "pageslink" %> for more detailed information on what web development services we offer and estimated costs.</p>
     </div>
-  </div>
 </div>
