--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,10 @@
 <div class="container" id="aboutus-flex">
-    <div class="box" style="width: 380px" >
-      <h5 class="pull-right" style="padding-top: 20px"><%= link_to "back", root_path, class:"pageslink" %></h5>
-      <h2 style="margin-bottom: -15px">About Us</h2>
-      <hr id="headerline">
-      <p>We're Developers is on a mission to conquer the web with clean, functional, and fun web services for all!</p>
-      <p>Our team has the experience and commitment to get your business suited with smart web technologies.</p>
-      <p>Whether you're looking for a company website, MVP(minimal viable product), or seeking to build something fresh like WeChat's 'Mini Programs', we got you covered!</p>
-    </div>
+  <div class="box" style="max-width: 380px" >
+    <h5 class="pull-right" style="padding-top: 20px"><%= link_to "back", root_path, class:"pageslink" %></h5>
+    <h2 style="margin-bottom: -15px">About Us</h2>
+    <hr id="headerline">
+    <p>We're Developers is on a mission to conquer the web with clean, functional, and fun web services for all!</p>
+    <p>Our team has the experience and commitment to get your business suited with smart web technologies.</p>
+    <p>Whether you're looking for a company website, MVP(minimal viable product), or seeking to build something fresh like WeChat's 'Mini Programs', we got you covered!</p>
+  </div>
 </div>
