--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,6 +5,6 @@
     <hr id="headerline">
     <p>We're Developers is on a mission to conquer the web with clean, functional, and fun web services for all!</p>
     <p>Our team has the experience and commitment to get your business suited with smart web technologies.</p>
-    <p>Whether you're looking for a company website, MVP(minimal viable product), or seeking to build something fresh like WeChat's 'Mini Programs', we got you covered!</p>
+    <p>Whether you're looking for a company website, MVP(minimum viable product), or seeking to build something fresh like WeChat's 'Mini Programs', we got you covered!</p>
   </div>
 </div>
