--- a/app/assets/stylesheets/pages/_aboutus.scss
+++ b/app/assets/stylesheets/pages/_aboutus.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   background-color: #F5D745;
-  width: 400px;
+  width: 100%;
   color: #384BB5;
   h2{
     color: #384BB5;
