--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container" id="aboutus-flex">
-  <div class="box" style="max-width: 380px" >
+  <div class="box" style="max-width: 380px; padding: initial; height: auto" >
     <h5 class="pull-right" style="padding-top: 20px"><%= link_to "back", root_path, class:"pageslink" %></h5>
     <h2 style="margin-bottom: -15px">About Us</h2>
     <hr id="headerline">
